# ecommerce-system

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.txt  docker-compose.yml  pyproject.toml
api_gateway/: Dockerfile  README.md  requirements.txt
api_gateway/app/: crud.py  database.py  main.py  models.py  producer.py  schemas.py  tables.py
database_service/: Dockerfile  pyproject.toml
database_service/src/database_service/: main.py
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: main.py
inventory_service/: Dockerfile  main.py  models.py  pyproject.toml  repository.py
inventory_service/app/: consumer.py  database.py  models.py
inventory_service/src/inventory_service/: consumer.py  main.py  rabbitmq.py  repository.py
inventory_service/src/inventory_service/api/: endpoints.py  main.py
inventory_service/src/inventory_service/broker/: consumer.py  publisher.py
inventory_service/src/inventory_service/core/: core.py
inventory_service/src/inventory_service/database/: db_engine.py  models.py
inventory_services/: README.md  requirements.txt
inventory_services/app/: consumer.py  setup_logger.py
order_services/: Dockerfile  README.md
order_services/app/: consumer.py  database.py  main.py  models.py
shared/: pyproject.toml
shared/src/shared/: db.py  events.py  models.py  schemas.py
user_services/: Dockerfile  README.md  requirements.txt
user_services/app/: consumer.py  models.py
