[project]
name = "ecommerce-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
