[project]
name = "ecommerce-system"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
