[project]
name = "inventory_service"
version = "0.0.1"
description = "Inventory microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
