[project]
name = "inventory_service"
version = "0.0.1"
description = "Inventory microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
