[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "pydantic>=2.11.2",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
